--- a/serverless/package.json
+++ b/serverless/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "license": "UNLICENSED",
   "scripts": {
     "start": "node server.mjs"
   },
