--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "animate.css": "^4.1.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
